[package]
name = "primeculator"
version = "0.1.0"
edition = "2021"
include = ["LICENSE-APACHE", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.29.0"
eframe = { version = "0.29.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1.0.210", features = ["derive"] }
unicode-segmentation = "1.12.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
