[package]
name = "primeculator"
version = "0.1.0"
edition = "2021"
include = ["LICENSE-APACHE", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1.0.210", features = ["derive"] }
unicode-segmentation = "1.12.0"
rfd = "0.15.0"
rand = "0.8.5"
base64 = "0.22.1"
egui_extras = "0.29.1"
egui_plot = "0.29.0"
num-bigint = { version = "0.4.3", features = ["serde", "rand"] }
num-prime = "0.4.4"
num-traits = "0.2.19"
num-iter = "0.1.45"
hex = "0.4.3"
[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"


# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
